// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button/IconButton IconButton Playground 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/IconButton IconButton Types 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #ffffff;
}

.emotion-6 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-6:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-6:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-6:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-6:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-8 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #1451dc;
}

.emotion-10 {
  color: #1451dc;
  background-color: #ffffff;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-10:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-15 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-15:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-15:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-15:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-15:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-19 {
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-19:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-19:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-19:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-19:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-23 {
  color: #1451dc;
  background-color: #ffffff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-23:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-23:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-23:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-23:active:not(:disabled) {
  background-color: #d0defd;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-6"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-10"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-15"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-19"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-23"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
